@@ -4,6 +4,13 @@ Wed Nov 27 16:01:11 CET 2002  Pekka Riikonen <priikone@silcnet.org>
 	  no arguments) or when list was modified.  Affected file
 	  silcd/command.c.
 
+	* Remove client from invite list in KILLED notify and in
+	  KILL command.  Affected file silcd/command.c and
+	  silcd/server.[ch].
+
+	* Fixed bugs in invite list handling in INVITE command.
+	  Affected files silcd/command.c and silcd/server_util.c.
+
 Mon Nov 25 18:21:43 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* The silc_argument_get_[first/next] now return the argument
